--- a/renderer/index.html
+++ b/renderer/index.html
@@ -330,7 +330,7 @@
         </div>
 
         <div class="actionsHintCard" style="margin-top: 14px">
-          <div class="hint">Note</div>
+          <div class="hint2">Note</div>
           <div class="actionsHint">Themes are saved on this device.</div>
         </div>
       </div>
